--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -37,5 +37,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
+<link rel="import" href="paris-elements/paris-personality.html">
+<link rel="import" href="paris-elements/emotion.html">
+<link rel="import" href="paris-elements/sentiment.html">
+<link rel="import" href="paris-elements/paris-input.html">
+<link rel="import" href="paris-elements/paris-main.html">
+<link rel="import" href="paris-elements/paris-radar-chart.html">
