intermediate version before workshop

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -42,3 +42,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="paris-elements/paris-input.html">
 <link rel="import" href="paris-elements/paris-main.html">
 <link rel="import" href="paris-elements/paris-radar-chart.html">
+<link rel="import" href="paris-elements/paris-gender-chart.html">
+<link rel="import" href="paris-elements/paris-age-chart.html">
