--- a/app/elements/paris-elements/paris-main.html
+++ b/app/elements/paris-elements/paris-main.html
@@ -51,7 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .result-card {
         /*width: calc(40% + 8px);*/
-        min-height: 300px;
+        min-height: 350px;
         max-height: 350px;
       }
 
@@ -67,13 +67,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <paper-material elevation="1">
-      <paris-input personalities="{{personalities}}" sentiments="{{sentiments}}" emotions="{{emotions}}"></paris-input>
+      <paris-input personalities="{{personalities}}" sentiments="{{sentiments}}" emotions="{{emotions}}" gender="{{gender}}" age="{{age}}"></paris-input>
     </paper-material>
 
     <div class="result-elements">
-    <paper-material class="result-card large" elevation="1">
-      <my-personality personalities="{{personalities}}"></my-personality>
-    </paper-material>
+    <!--<paper-material class="result-card large" elevation="1">-->
+      <!--<my-personality personalities="{{personalities}}"></my-personality>-->
+    <!--</paper-material>-->
 
     <paper-material class="result-card" elevation="1">
       <paris-radar-chart emotions="{{emotions}}"></paris-radar-chart>
@@ -82,27 +82,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <paper-material class="result-card small" elevation="1">
       <my-sentiment sentiments="{{sentiments}}"></my-sentiment>
     </paper-material>
+
+      <paper-material class="result-card" elevation="1">
+        <paris-gender-chart gender="{{gender}}"></paris-gender-chart>
+      </paper-material>
+
+      <!--<paper-material class="result-card" elevation="1">-->
+        <!--<paris-age-chart age="{{age}}"></paris-age-chart>-->
+      <!--</paper-material>-->
+
     </div>
 
-    <iron-ajax id="emotion"
-               url="http://augment.cs.kuleuven.be/paris/api/emotion"
-               method="POST"
-               handle-as="json"
-               content-type="text/plain"
-               last-response="{{data}}"
-               params="{{ajaxParams}}"
-               on-response="responseHandler"
-               on-error="handleError"></iron-ajax>
-
-    <iron-ajax id="personality"
-               url="http://augment.cs.kuleuven.be/paris/api/personality"
-               method="POST"
-               handle-as="json"
-               content-type="text/plain"
-               last-response="{{dataPersonality}}"
-               params="{{ajaxParams}}"
-               on-response="responseHandlerPersonality"
-               on-error="handleError"></iron-ajax>
   </template>
 
   <script>
