--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Main Area -->
       <paper-scroll-header-panel main id="headerPanelMain" condenses keep-condensed-header>
         <!-- Main Toolbar -->
-        <paper-toolbar id="mainToolbar" class="tall">
+        <paper-toolbar id="mainToolbar" class="small">
           <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
 
           <span class="space"></span>
@@ -109,9 +109,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
 
           <!-- Application sub title -->
-          <div class="bottom bottom-container">
-            <div class="bottom-title">KU Leuven - augment</div>
-          </div>
+          <!--<div class="bottom bottom-container">-->
+            <!--<div class="bottom-title">KU Leuven - augment</div>-->
+          <!--</div>-->
         </paper-toolbar>
 
         <!-- Main Content -->
